# matrix-bridge-zulip

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  _todos.md
migrations/postgres/: 001_init.sql
src/: bridge.rs  cli.rs  config.rs  db.rs  main.rs  matrix.rs  media.rs  parsers.rs  utils.rs  web.rs  zulip.rs
src/config/: parser.rs  validator.rs
src/db/: error.rs  manager.rs  models.rs  schema.rs
src/db/postgres/: event_store.rs  message_store.rs  mod.rs  organization_store.rs  reaction_store.rs  room_store.rs  user_store.rs
src/db/stores/: event_store.rs  message_store.rs  mod.rs  organization_store.rs  reaction_store.rs  room_store.rs  user_store.rs
src/matrix/: event_handler.rs  ghost.rs
src/parsers/: matrix_parser.rs  zulip_parser.rs
src/rooms/: room.rs
src/utils/: error.rs  logging.rs
src/zulip/: event_handler.rs  types.rs  websocket.rs
